force-app/main/default/objects/General_Configuration__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Add a description to your custom metadata, like where is it used or important notes for it.</description>
    <inlineHelpText>Add a description to your custom metadata, like where is it used or important notes for it.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>