force-app/main/default/objects/General_Configuration__mdt/fields/Long_Text_Value__c.field-meta.xml
<CustomField>
    <fullName>Long_Text_Value__c</fullName>
    <label>Long Text Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>