force-app/main/default/objects/General_Configuration__mdt/listViews/aallloonthings.listView-meta.xml
<ListView>
    <fullName>aallloonthings</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Text_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>aallloonthings</label>
    <language>en_US</language>
</ListView>